# m4_mcu

./: .gitignore  README.md  code_dump.txt  generate_code_dump.py  platformio.ini
include/: Config.h  PullStateManager.h  ScreenUpdater.h  SpeedModule.h  StateManager.h  lv_conf.h  lv_conf_check.h
include/custom_ui/: custom_keyboard.h
include/dev_utils/: DevSimulator.h  benchmark.h  demo_ui.h  test_display.h
include/display/: backlight.h  display.h
include/touch/: calibration.h  touch.h
src/: PullStateManager.cpp  ScreenUpdater.cpp  SpeedModule.cpp  StateManager.cpp  lv_tick_custom.cpp  main.cpp
src/custom_ui/: custom_keyboard.cpp
src/dev_utils/: DevSimulator.cpp  benchmark.cpp  demo_ui.cpp  test_display.cpp
src/display/: backlight.cpp  display.cpp
src/touch/: calibration.cpp  touch.cpp
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.cpp  ui_themes.h
ui/components/: ui_comp_hook.c
ui/fonts/: ui_font_BIO_BOLDITALIC_10.c  ui_font_BIO_BOLDITALIC_6.c  ui_font_BIO_BOLDITALIC_8.c  ui_font_BIO_EXTRABOLD_19.c  ui_font_BIO_SEMIBOLD_6.c  ui_font_BIO_SEMIBOLD_7.c  ui_font_HH13.c  ui_font_HH24.c  ui_font_HH40.c  ui_font_HH8.c  ui_font_INFORME_24.c  ui_font_INFORME_40.c
ui/images/: ui_img_iconchangedriver44px_png.c  ui_img_iconsettings44px_png.c
ui/screens/: ui_ScreenMain.c  ui_ScreenSettings.c
